# ha-skywatch

./: .gitignore  .gitlab-ci.yml  .mise.toml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
blueprints/automation/skywatch/: aircraft-entry-alert.yaml  daily-digest.yaml  watch-list-match-alert.yaml
custom_components/skywatch/: __init__.py  _device.py  binary_sensor.py  button.py  classify.py  config_flow.py  const.py  coordinator.py  data_builder.py  http.py  legacy_import.py  manifest.json  models.py  number.py  sensor.py  services.py  services.yaml  switch.py  text.py
custom_components/skywatch/backends/: __init__.py  base.py  fr24.py
docs/: MANUAL_VERIFICATION.md  RECORDER_EXCLUDE.md
docs/planning/: 01-plan-review.md  02-test-strategy.md  03-code-inventory.md  04-synthesis.md  05-feature-gap-analysis.md
examples/: dashboard-sky.yaml.template  dashboard-skywatch-test.yaml  input-helper-automations.yaml
scripts/: delete-test-dashboard.py  deploy-test-dashboard.py  install-to-ha.sh  smoke.sh  uninstall-from-ha.sh
scripts/browser/: package-lock.json  package.json  verify-skywatch-dashboard.mjs
tests/: conftest.py
tests/fixtures/: fr24_payloads.py
tests/ha/: conftest.py  test_config_flow.py
tests/smoke/: test_live_ha.py
tests/unit/: test_backend_base.py  test_backend_fr24.py  test_classify.py  test_data_builder.py  test_legacy_import.py  test_migrations.py  test_normalizers.py  test_positions.py  test_queries.py  test_queries_active.py  test_repository.py
www/: skywatch-map.html
(+9 files in other folders)
