[project]
name = "ha-skywatch"
version = "0.0.1"
description = "Home Assistant aircraft sightings, watch lists, and overhead alerts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
  "PLR0913",
  "PLR2004"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["custom_components/skywatch"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError"
]
